--- a/notebooks/01_process_data.ipynb
+++ b/notebooks/01_process_data.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24b95c9e",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Parameters (deze worden overschreven door Papermill)\n",
@@ -35,6 +39,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19764c89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialiseer Spark session\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Gebruik getOrCreate om bestaande sessie te hergebruiken\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(f\"Process_{source}_{process_type}\") \\\n",
+    "    .master(\"local[2]\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "print(f\"✅ Spark session created: {spark.sparkContext.appName}\")\n",
+    "print(f\"📊 Spark version: {spark.version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "17309834",
    "metadata": {},
    "outputs": [],
@@ -56,18 +80,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simuleer data processing\n",
-    "import time\n",
+    "# Spark data processing\n",
+    "from pyspark.sql import functions as F\n",
+    "from datetime import datetime\n",
     "\n",
-    "print(f\"\\n🔄 Processing {source} data...\")\n",
+    "print(f\"\\n🔄 Processing {source} data with Spark...\")\n",
     "print(f\"📅 Timestamp: {run_ts}\")\n",
     "print(f\"⚙️  Type: {process_type}\")\n",
     "\n",
-    "# Simuleer werk\n",
-    "time.sleep(2)\n",
+    "# Maak sample data\n",
+    "data = [\n",
+    "    (1, \"Product A\", 100, run_ts),\n",
+    "    (2, \"Product B\", 200, run_ts),\n",
+    "    (3, \"Product C\", 150, run_ts),\n",
+    "]\n",
     "\n",
-    "print(f\"✅ Processing complete!\")\n",
-    "print(f\"📊 Records processed: 1000\")"
+    "df = spark.createDataFrame(data, [\"id\", \"product\", \"amount\", \"timestamp\"])\n",
+    "\n",
+    "# Voeg derived column toe\n",
+    "df = df.withColumn(\"category\", \n",
+    "    F.when(F.col(\"amount\") > 150, \"high\")\n",
+    "     .when(F.col(\"amount\") > 100, \"medium\")\n",
+    "     .otherwise(\"low\")\n",
+    ")\n",
+    "\n",
+    "print(f\"\\n📊 Data processed:\")\n",
+    "df.show()\n",
+    "\n",
+    "record_count = df.count()\n",
+    "print(f\"✅ Processing complete! Records: {record_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab53fe6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleanup\n",
+    "spark.stop()\n",
+    "print(\"🛑 Spark session stopped\")"
    ]
   }
  ],
