Fixed path issue, should work now on all environments

--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -78,25 +78,54 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Auto-detect base path (Fabric vs Local)\n",
-        "def detect_base_path() -> str:\n",
-        "    \"\"\"\n",
-        "    Auto-detect base path for Files directory.\n",
-        "    \n",
-        "    Returns:\n",
-        "        '/lakehouse/default/Files' (Fabric) or 'Files' (Local)\n",
-        "    \"\"\"\n",
-        "    fabric_path = '/lakehouse/default/Files'\n",
-        "    \n",
-        "    if os.path.exists('/lakehouse/default'):\n",
-        "        return fabric_path\n",
-        "    else:\n",
-        "        return 'Files'\n",
+        "# Auto-detect base path (Fabric vs Cluster)\n",
+        "# Base path voor Files/Tables gebruiken we centraal vanuit 02_utils_config\n",
         "\n",
-        "BASE_PATH = detect_base_path()\n",
+        "try:\n",
+        "    # Als 02_utils_config al gedraaid heeft, staat BASE_PATH al in de globals\n",
+        "    BASE_PATH  # type: ignore[name-defined]\n",
+        "    print(f\"✓ Base path (bronze worker): {BASE_PATH}\")\n",
+        "    env_type = (\n",
+        "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
+        "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
+        "        else \"Cluster/Relative\"\n",
+        "    )\n",
+        "    print(f\"✓ Environment (bronze worker): {env_type}\")\n",
+        "except NameError:\n",
+        "    # Fallback zodat je 10_bronze_load ook stand-alone kunt draaien\n",
+        "    import glob\n",
+        "    import os\n",
         "\n",
-        "print(f\"✓ Base path: {BASE_PATH}\")\n",
-        "print(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
+        "    def detect_base_path() -> str:\n",
+        "        \"\"\"\n",
+        "        Zelfde logica als in 02_utils_config:\n",
+        "        1. Fabric: /lakehouse/default/Files\n",
+        "        2. Custom cluster: /data/lakehouse/**/Files\n",
+        "        3. Anders: 'Files' (relatief, bijvoorbeeld in je repo)\n",
+        "        \"\"\"\n",
+        "        # 1. Fabric\n",
+        "        fabric_path = \"/lakehouse/default/Files\"\n",
+        "        if os.path.exists(fabric_path):\n",
+        "            return fabric_path\n",
+        "\n",
+        "        # 2. Custom cluster\n",
+        "        if os.path.exists(\"/data/lakehouse\"):\n",
+        "            pattern = \"/data/lakehouse/**/Files\"\n",
+        "            matches = glob.glob(pattern, recursive=True)\n",
+        "            if matches:\n",
+        "                return sorted(matches)[0]\n",
+        "\n",
+        "        # 3. Local / relative\n",
+        "        return \"Files\"\n",
+        "\n",
+        "    BASE_PATH = detect_base_path()\n",
+        "    env_type = (\n",
+        "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
+        "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
+        "        else \"Local/Relative\"\n",
+        "    )\n",
+        "    print(f\"✓ Base path (bronze worker – fallback): {BASE_PATH}\")\n",
+        "    print(f\"✓ Environment (bronze worker – fallback): {env_type}\")\n"
       ]
     },
     {
