Removed windows_replace as valied load_type

--- a/notebooks/02_utils_config.ipynb
+++ b/notebooks/02_utils_config.ipynb
@@ -217,7 +217,7 @@
         "        raise ValueError(\"DAG has no tables defined\")\n",
         "    \n",
         "    # Validate each table\n",
-        "    valid_load_modes = {\"snapshot\", \"incremental\", \"window\", \"window_replace\"}\n",
+        "    valid_load_modes = {\"snapshot\", \"incremental\", \"window\"}\n",
         "    \n",
         "    for idx, table in enumerate(dag[\"tables\"]):\n",
         "        if \"name\" not in table:\n",
