--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -25,7 +25,7 @@
         "## Load Modes\n",
         "- **snapshot**: Complete table refresh (overwrite)\n",
         "- **incremental**: Delta append with run_ts (CDC history)\n",
-        "- **window/window_replace**: Overwrite with partitioning support\n",
+        "- **window**: Overwrite with partitioning support\n",
         "\n",
         "This notebook is imported via `%run` from the master orchestrator."
       ]
@@ -252,7 +252,7 @@
         "    \n",
         "    # Get load mode (default to snapshot)\n",
         "    load_mode = (table_def.get(\"load_mode\") or \"snapshot\").lower()\n",
-        "    supported_modes = {\"snapshot\", \"window\", \"window_replace\", \"incremental\"}\n",
+        "    supported_modes = {\"snapshot\", \"window\", \"incremental\"}\n",
         "    \n",
         "    # Initialize metrics\n",
         "    log_id = f\"{source_name}:{table_name}:{run_ts}:{uuid4().hex[:8]}\"\n",
@@ -386,7 +386,7 @@
         "    \n",
         "    # For window tables with partitioning config, add partition columns\n",
         "    partitioning_config = table_def.get(\"partitioning\")\n",
-        "    if partitioning_config and load_mode in (\"window\", \"window_replace\"):\n",
+        "    if partitioning_config and load_mode in (\"window\"):\n",
         "        partition_type = partitioning_config.get(\"type\")\n",
         "        \n",
         "        if partition_type == \"year_month\":\n",
@@ -421,7 +421,7 @@
         "            if debug:\n",
         "                print(f\"  Mode: APPEND with partition by _bronze_load_ts (CDC history)\")\n",
         "        \n",
-        "        elif load_mode in (\"snapshot\", \"window\", \"window_replace\"):\n",
+        "        elif load_mode in (\"snapshot\", \"window\"):\n",
         "            # OVERWRITE entire table\n",
         "            # For window tables with partitioning, could use dynamic partition overwrite\n",
         "            # but for simplicity, we overwrite entire table\n",
