Implement generic build function to build a parquet folder

--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -68,6 +68,7 @@
         "from typing import Dict, Any, Optional\n",
         "from uuid import uuid4\n",
         "import os\n",
+        "from modules.path_utils import build_parquet_dir\n",
         "\n",
         "print(\"✓ Imports loaded\")"
       ]
@@ -141,31 +142,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def build_parquet_dir(\n",
-        "    base_files: str,\n",
-        "    source_name: str,\n",
-        "    run_ts: str,\n",
-        "    table_name: str\n",
-        ") -> str:\n",
-        "    \"\"\"\n",
-        "    Build the parquet directory path for one table and run_ts.\n",
-        "    \n",
-        "    Path structure: {BASE_PATH}/{base_files}/{source}/{year}/{month}/{day}/{run_ts}/{table}\n",
-        "    \n",
-        "    Example:\n",
-        "        build_parquet_dir(\"greenhouse_sources\", \"vizier\", \"20251105T142752505\", \"Relaties\")\n",
-        "        → \"Files/greenhouse_sources/vizier/2025/11/05/20251105T142752505/Relaties\"\n",
-        "    \"\"\"\n",
-        "    if not run_ts or len(run_ts) < 8:\n",
-        "        raise ValueError(f\"run_ts '{run_ts}' is not in expected yyyymmddThhmmss format\")\n",
-        "    \n",
-        "    year = run_ts[0:4]\n",
-        "    month = run_ts[4:6]\n",
-        "    day = run_ts[6:8]\n",
-        "    \n",
-        "    return f\"{BASE_PATH}/{base_files}/{source_name}/{year}/{month}/{day}/{run_ts}/{table_name}\"\n",
-        "\n",
-        "\n",
         "def is_missing_path_error(exc: Exception) -> bool:\n",
         "    \"\"\"\n",
         "    Heuristic to detect 'no parquet files found' situations.\n",
@@ -215,7 +191,7 @@
         "    table_def: Dict[str, Any],\n",
         "    source_name: str,\n",
         "    run_ts: str,\n",
-        "    base_files: str = \"greenhouse_sources\",\n",
+        "    base_files: str, #= \"greenhouse_sources\",\n",
         "    debug: bool = False\n",
         ") -> Dict[str, Any]:\n",
         "    \"\"\"\n",
@@ -300,7 +276,7 @@
         "        delta_table_full = target_table\n",
         "    \n",
         "    # Build parquet path\n",
-        "    parquet_dir = build_parquet_dir(base_files, source_name, run_ts, table_name)\n",
+        "    parquet_dir = build_parquet_dir(base_files, source_name, run_ts, table_name, spark)\n",
         "    parquet_glob = f\"{parquet_dir}/*.parquet\"\n",
         "    \n",
         "    if debug:\n",
