Fixed type inconsitencies

--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -307,124 +307,154 @@
         "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {LOG_SCHEMA}\")\n",
         "print(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
         "\n",
-        "# Create Bronze processing log\n",
         "if not spark.catalog.tableExists(BRONZE_LOG_TABLE_FULLNAME):\n",
-        "    spark.sql(f\"\"\"\n",
-        "        CREATE TABLE {BRONZE_LOG_TABLE_FULLNAME} (\n",
-        "            log_id STRING,\n",
-        "            run_id STRING,\n",
-        "            run_date DATE,\n",
-        "            run_ts STRING,\n",
-        "            source STRING,\n",
-        "            table_name STRING,\n",
-        "            load_mode STRING,\n",
-        "            status STRING,\n",
-        "            rows_read LONG,\n",
-        "            rows_written LONG,\n",
-        "            start_time TIMESTAMP,\n",
-        "            end_time TIMESTAMP,\n",
-        "            duration_seconds LONG,\n",
-        "            error_message STRING,\n",
-        "            parquet_path STRING,\n",
-        "            delta_table STRING\n",
-        "        )\n",
-        "        USING DELTA\n",
-        "        PARTITIONED BY (run_date, table_name)\n",
-        "    \"\"\")\n",
-        "    print(f\"✓ Created: {BRONZE_LOG_TABLE_FULLNAME}\")\n",
-        "else:\n",
-        "    print(f\"✓ Exists: {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+        "    empty_df = spark.createDataFrame([], bronze_log_schema)\n",
+        "    (empty_df.write\n",
+        "         .format(\"delta\")\n",
+        "         .partitionBy(\"run_date\", \"table_name\")\n",
+        "         .mode(\"append\")   # of .mode(\"ignore\")\n",
+        "         .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
         "\n",
-        "# Create Bronze run summary\n",
+        "# # Create Bronze processing log\n",
+        "# if not spark.catalog.tableExists(BRONZE_LOG_TABLE_FULLNAME):\n",
+        "#     spark.sql(f\"\"\"\n",
+        "#         CREATE TABLE {BRONZE_LOG_TABLE_FULLNAME} (\n",
+        "#             log_id STRING,\n",
+        "#             run_id STRING,\n",
+        "#             run_date DATE,\n",
+        "#             run_ts STRING,\n",
+        "#             source STRING,\n",
+        "#             table_name STRING,\n",
+        "#             load_mode STRING,\n",
+        "#             status STRING,\n",
+        "#             rows_read LONG,\n",
+        "#             rows_written LONG,\n",
+        "#             start_time TIMESTAMP,\n",
+        "#             end_time TIMESTAMP,\n",
+        "#             duration_seconds LONG,\n",
+        "#             error_message STRING,\n",
+        "#             parquet_path STRING,\n",
+        "#             delta_table STRING\n",
+        "#         )\n",
+        "#         USING DELTA\n",
+        "#         PARTITIONED BY (run_date, table_name)\n",
+        "#     \"\"\")\n",
+        "#     print(f\"✓ Created: {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+        "# else:\n",
+        "#     print(f\"✓ Exists: {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+        "\n",
         "if not spark.catalog.tableExists(BRONZE_SUMMARY_TABLE_FULLNAME):\n",
-        "    spark.sql(f\"\"\"\n",
-        "        CREATE TABLE {BRONZE_SUMMARY_TABLE_FULLNAME} (\n",
-        "            run_id STRING,\n",
-        "            source STRING,\n",
-        "            run_ts STRING,\n",
-        "            run_date DATE,\n",
-        "            run_start TIMESTAMP,\n",
-        "            run_end TIMESTAMP,\n",
-        "            duration_seconds LONG,\n",
-        "            total_tables LONG,\n",
-        "            tables_success LONG,\n",
-        "            tables_empty LONG,\n",
-        "            tables_failed LONG,\n",
-        "            tables_skipped LONG,\n",
-        "            total_rows LONG,\n",
-        "            workers LONG,\n",
-        "            sum_task_seconds LONG,\n",
-        "            theoretical_min_sec LONG,\n",
-        "            actual_time_sec LONG,\n",
-        "            efficiency_pct DOUBLE,\n",
-        "            failed_tables STRING\n",
-        "        )\n",
-        "        USING DELTA\n",
-        "        PARTITIONED BY (run_date)\n",
-        "    \"\"\")\n",
-        "    print(f\"✓ Created: {BRONZE_SUMMARY_TABLE_FULLNAME}\")\n",
-        "else:\n",
-        "    print(f\"✓ Exists: {BRONZE_SUMMARY_TABLE_FULLNAME}\")\n",
+        "    empty_df = spark.createDataFrame([], bronze_log_schema)\n",
+        "    (empty_df.write\n",
+        "         .format(\"delta\")\n",
+        "         .mode(\"append\")   # of .mode(\"ignore\")\n",
+        "         .saveAsTable(BRONZE_SUMMARY_TABLE_FULLNAME))\n",
         "\n",
-        "# Create Silver processing log\n",
+        "# # Create Bronze run summary\n",
+        "# if not spark.catalog.tableExists(BRONZE_SUMMARY_TABLE_FULLNAME):\n",
+        "#     spark.sql(f\"\"\"\n",
+        "#         CREATE TABLE {BRONZE_SUMMARY_TABLE_FULLNAME} (\n",
+        "#             run_id STRING,\n",
+        "#             source STRING,\n",
+        "#             run_ts STRING,\n",
+        "#             run_date DATE,\n",
+        "#             run_start TIMESTAMP,\n",
+        "#             run_end TIMESTAMP,\n",
+        "#             duration_seconds LONG,\n",
+        "#             total_tables LONG,\n",
+        "#             tables_success LONG,\n",
+        "#             tables_empty LONG,\n",
+        "#             tables_failed LONG,\n",
+        "#             tables_skipped LONG,\n",
+        "#             total_rows LONG,\n",
+        "#             workers LONG,\n",
+        "#             sum_task_seconds LONG,\n",
+        "#             theoretical_min_sec LONG,\n",
+        "#             actual_time_sec LONG,\n",
+        "#             efficiency_pct DOUBLE,\n",
+        "#             failed_tables STRING\n",
+        "#         )\n",
+        "#         USING DELTA\n",
+        "#         PARTITIONED BY (run_date)\n",
+        "#     \"\"\")\n",
+        "#     print(f\"✓ Created: {BRONZE_SUMMARY_TABLE_FULLNAME}\")\n",
+        "# else:\n",
+        "#     print(f\"✓ Exists: {BRONZE_SUMMARY_TABLE_FULLNAME}\")\n",
+        "\n",
         "if not spark.catalog.tableExists(SILVER_LOG_TABLE_FULLNAME):\n",
-        "    spark.sql(f\"\"\"\n",
-        "        CREATE TABLE {SILVER_LOG_TABLE_FULLNAME} (\n",
-        "            log_id STRING,\n",
-        "            run_id STRING,\n",
-        "            run_date DATE,\n",
-        "            run_ts STRING,\n",
-        "            source STRING,\n",
-        "            table_name STRING,\n",
-        "            load_mode STRING,\n",
-        "            status STRING,\n",
-        "            rows_inserted LONG,\n",
-        "            rows_updated LONG,\n",
-        "            rows_deleted LONG,\n",
-        "            rows_unchanged LONG,\n",
-        "            total_silver_rows LONG,\n",
-        "            bronze_rows LONG,\n",
-        "            bronze_table STRING,\n",
-        "            start_time TIMESTAMP,\n",
-        "            end_time TIMESTAMP,\n",
-        "            duration_seconds LONG,\n",
-        "            error_message STRING,\n",
-        "            silver_table STRING\n",
-        "        )\n",
-        "        USING DELTA\n",
-        "        PARTITIONED BY (run_date, table_name)\n",
-        "    \"\"\")\n",
-        "    print(f\"✓ Created: {SILVER_LOG_TABLE_FULLNAME}\")\n",
-        "else:\n",
-        "    print(f\"✓ Exists: {SILVER_LOG_TABLE_FULLNAME}\")\n",
+        "    empty_df = spark.createDataFrame([], bronze_log_schema)\n",
+        "    (empty_df.write\n",
+        "         .format(\"delta\")\n",
+        "         .partitionBy(\"run_date\", \"table_name\")\n",
+        "         .mode(\"append\")   # of .mode(\"ignore\")\n",
+        "         .saveAsTable(SILVER_LOG_TABLE_FULLNAME))\n",
         "\n",
-        "# Create Silver run summary\n",
+        "# # Create Silver processing log\n",
+        "# if not spark.catalog.tableExists(SILVER_LOG_TABLE_FULLNAME):\n",
+        "#     spark.sql(f\"\"\"\n",
+        "#         CREATE TABLE {SILVER_LOG_TABLE_FULLNAME} (\n",
+        "#             log_id STRING,\n",
+        "#             run_id STRING,\n",
+        "#             run_date DATE,\n",
+        "#             run_ts STRING,\n",
+        "#             source STRING,\n",
+        "#             table_name STRING,\n",
+        "#             load_mode STRING,\n",
+        "#             status STRING,\n",
+        "#             rows_inserted LONG,\n",
+        "#             rows_updated LONG,\n",
+        "#             rows_deleted LONG,\n",
+        "#             rows_unchanged LONG,\n",
+        "#             total_silver_rows LONG,\n",
+        "#             bronze_rows LONG,\n",
+        "#             bronze_table STRING,\n",
+        "#             start_time TIMESTAMP,\n",
+        "#             end_time TIMESTAMP,\n",
+        "#             duration_seconds LONG,\n",
+        "#             error_message STRING,\n",
+        "#             silver_table STRING\n",
+        "#         )\n",
+        "#         USING DELTA\n",
+        "#         PARTITIONED BY (run_date, table_name)\n",
+        "#     \"\"\")\n",
+        "#     print(f\"✓ Created: {SILVER_LOG_TABLE_FULLNAME}\")\n",
+        "# else:\n",
+        "#     print(f\"✓ Exists: {SILVER_LOG_TABLE_FULLNAME}\")\n",
+        "\n",
         "if not spark.catalog.tableExists(SILVER_SUMMARY_TABLE_FULLNAME):\n",
-        "    spark.sql(f\"\"\"\n",
-        "        CREATE TABLE {SILVER_SUMMARY_TABLE_FULLNAME} (\n",
-        "            run_id STRING,\n",
-        "            source STRING,\n",
-        "            run_ts STRING,\n",
-        "            run_date DATE,\n",
-        "            run_start TIMESTAMP,\n",
-        "            run_end TIMESTAMP,\n",
-        "            duration_seconds LONG,\n",
-        "            total_tables LONG,\n",
-        "            tables_success LONG,\n",
-        "            tables_failed LONG,\n",
-        "            tables_skipped LONG,\n",
-        "            total_inserts LONG,\n",
-        "            total_updates LONG,\n",
-        "            total_deletes LONG,\n",
-        "            total_unchanged LONG,\n",
-        "            failed_tables STRING\n",
-        "        )\n",
-        "        USING DELTA\n",
-        "        PARTITIONED BY (run_date)\n",
-        "    \"\"\")\n",
-        "    print(f\"✓ Created: {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
-        "else:\n",
-        "    print(f\"✓ Exists: {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+        "    empty_df = spark.createDataFrame([], bronze_log_schema)\n",
+        "    (empty_df.write\n",
+        "         .format(\"delta\")\n",
+        "         .mode(\"append\")   # of .mode(\"ignore\")\n",
+        "         .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
+        "    \n",
+        "# # Create Silver run summary\n",
+        "# if not spark.catalog.tableExists(SILVER_SUMMARY_TABLE_FULLNAME):\n",
+        "#     spark.sql(f\"\"\"\n",
+        "#         CREATE TABLE {SILVER_SUMMARY_TABLE_FULLNAME} (\n",
+        "#             run_id STRING,\n",
+        "#             source STRING,\n",
+        "#             run_ts STRING,\n",
+        "#             run_date DATE,\n",
+        "#             run_start TIMESTAMP,\n",
+        "#             run_end TIMESTAMP,\n",
+        "#             duration_seconds LONG,\n",
+        "#             total_tables LONG,\n",
+        "#             tables_success LONG,\n",
+        "#             tables_failed LONG,\n",
+        "#             tables_skipped LONG,\n",
+        "#             total_inserts LONG,\n",
+        "#             total_updates LONG,\n",
+        "#             total_deletes LONG,\n",
+        "#             total_unchanged LONG,\n",
+        "#             failed_tables STRING\n",
+        "#         )\n",
+        "#         USING DELTA\n",
+        "#         PARTITIONED BY (run_date)\n",
+        "#     \"\"\")\n",
+        "#     print(f\"✓ Created: {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+        "# else:\n",
+        "#     print(f\"✓ Exists: {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
         "\n",
         "\n",
         "print(\"\\n✓ All log tables ready\")"
